...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin"
                    android:hint="@string/prompt_adopter_name">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/adopter_registration_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_adopter_registration_last_name"
...
                        android:lines="6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btn__adopter_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/register_adopter_registration"
                    android:layout_margin="24dp" />

            </LinearLayout>
...
