<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

    <ScrollView
        android:layout_height="wrap_content"
        android:layout_width="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="15dp"
            tools:context=".ui.PetDetailFragment">


            <!-- TODO: Update blank fragment layout -->


            <ProgressBar
                android:id="@+id/prgProgress"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pet_detail_title"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

            <ImageView
                android:id="@+id/imgPetPhoto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/txtLabelName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pet_detail_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TextView
                android:id="@+id/txtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <TextView
                android:id="@+id/txtLabelGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pet_detail_sex"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TextView
                android:id="@+id/txtGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                 />

            <TextView
                android:id="@+id/txtLabelRace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pet_detail_race"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TextView
                android:id="@+id/txtRace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <TextView
                android:id="@+id/txtLabelDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pet_detail_description"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TextView
                android:id="@+id/txtDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                 />

            <TextView
                android:id="@+id/txtLabelBirth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pet_detail_birthdate"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TextView
                android:id="@+id/txtBirth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <TextView
                android:id="@+id/txtLabelRescue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pet_detail_recue_date"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TextView
                android:id="@+id/txtRescue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <TextView
                android:id="@+id/txtLabelType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pet_detail_type"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TextView
                android:id="@+id/txtType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <TextView
                android:id="@+id/txtLabelSterilized"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pet_detail_sterilized"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TextView
                android:id="@+id/txtSterilized"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                 />

            <TextView
                android:id="@+id/txtLabelVaccine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pet_detail_vaccines"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvwVaccine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:verticalScrollbarPosition="right"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="1"
                tools:itemCount="1"
                tools:listitem="@layout/view_vaccine_item" />

            <TextView
                android:id="@+id/txtLabelDeworming"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pet_detail_deworming"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvwDeworming"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:verticalScrollbarPosition="right"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:spanCount="1"
                tools:itemCount="1"
                tools:listitem="@layout/view_deworming_item" />

            <TextView
                android:id="@+id/txtLabelStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pet_detail_status"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TextView
                android:id="@+id/txtStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                 />

            <TextView
                android:id="@+id/txtLabelEvidences"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="@string/pet_detail_evidences"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvwEvidences"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:verticalScrollbarPosition="right"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:spanCount="1"
                tools:itemCount="1"
                tools:listitem="@layout/view_evidence_item" />

        </LinearLayout>
    </ScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/bt_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:src="@android:drawable/ic_menu_edit"
            android:layout_gravity="bottom|end"
            />

    </FrameLayout>
</layout>