...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin"
                    android:hint="@string/prompt_rescuer_name">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/rescuer_registration_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_rescuer_registration_description"
...
                        android:lines="6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btn_rescuer_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/action_register"
                    android:layout_margin="24dp" />
            </LinearLayout>

...
